src/objects/Contracted_Quote_c_x__x.object
<CustomObject>
    <externalDataSource>ALU_Data_Source_New</externalDataSource>
    <externalName>Contracted_Quote_c__x</externalName>
    <label>Surround CQ</label>
    <pluralLabel>Surround CQs</pluralLabel>
    <fields>
        <fullName>Account_Name_Text_Only_c_c__c</fullName>
        <externalDeveloperName>Account_Name_Text_Only_c__c</externalDeveloperName>
        <label>Account Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Name_c_c__c</fullName>
        <externalDeveloperName>Account_Name_c__c</externalDeveloperName>
        <label>Account Id ALU</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number_c_c__c</fullName>
        <externalDeveloperName>Account_Number_c__c</externalDeveloperName>
        <label>Account Number</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Account_Sold_To_c_c__c</fullName>
        <externalDeveloperName>Account_Sold_To_c__c</externalDeveloperName>
        <label>Account Sold To</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Active_c_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Active_c__c</externalDeveloperName>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CAT_Referential_c_c__c</fullName>
        <externalDeveloperName>CAT_Referential_c__c</externalDeveloperName>
        <label>CBT_CT Referential</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CAT_c_c__c</fullName>
        <externalDeveloperName>CAT_c__c</externalDeveloperName>
        <label>CBT_CT</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQ_Close_Date_c_c__c</fullName>
        <externalDeveloperName>CQ_Close_Date_c__c</externalDeveloperName>
        <label>CQ Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CQ_Description_c_c__c</fullName>
        <externalDeveloperName>CQ_Description_c__c</externalDeveloperName>
        <label>CQ Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CQ_Due_Date_c_c__c</fullName>
        <externalDeveloperName>CQ_Due_Date_c__c</externalDeveloperName>
        <label>CQ Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CQ_Involved_BU_Codes_c_c__c</fullName>
        <externalDeveloperName>CQ_Involved_BU_Codes_c__c</externalDeveloperName>
        <label>CQ Involved BL Codes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQ_Involved_BU_Description_c_c__c</fullName>
        <externalDeveloperName>CQ_Involved_BU_Description_c__c</externalDeveloperName>
        <label>CQ Involved BL Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQ_Language_c_c__c</fullName>
        <externalDeveloperName>CQ_Language_c__c</externalDeveloperName>
        <label>CQ Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>English</fullName>
                </value>
                <value>
                    <fullName>Chinese</fullName>
                </value>
                <value>
                    <fullName>Dutch</fullName>
                </value>
                <value>
                    <fullName>French</fullName>
                </value>
                <value>
                    <fullName>German</fullName>
                </value>
                <value>
                    <fullName>Greek</fullName>
                </value>
                <value>
                    <fullName>Italian</fullName>
                </value>
                <value>
                    <fullName>Japanese</fullName>
                </value>
                <value>
                    <fullName>Korean</fullName>
                </value>
                <value>
                    <fullName>Others</fullName>
                </value>
                <value>
                    <fullName>Polish</fullName>
                </value>
                <value>
                    <fullName>Portuguese</fullName>
                </value>
                <value>
                    <fullName>Russian</fullName>
                </value>
                <value>
                    <fullName>Spanish</fullName>
                </value>
                <value>
                    <fullName>Turkish</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CQ_Lead_Division_c_c__c</fullName>
        <externalDeveloperName>CQ_Lead_Division_c__c</externalDeveloperName>
        <label>CQ Lead Division</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQ_Lead_Email_c_c__c</fullName>
        <externalDeveloperName>CQ_Lead_Email_c__c</externalDeveloperName>
        <label>CQ Lead Email</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQ_Lead_Name_c_c__c</fullName>
        <externalDeveloperName>CQ_Lead_Name_c__c</externalDeveloperName>
        <label>CQ Lead Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQ_Lead_UPI_c_c__c</fullName>
        <externalDeveloperName>CQ_Lead_UPI_c__c</externalDeveloperName>
        <label>CQ Lead UPI</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQ_Number_c_c__c</fullName>
        <externalDeveloperName>CQ_Number_c__c</externalDeveloperName>
        <label>CQ Number</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQ_Requestor_Contact_c_c__c</fullName>
        <externalDeveloperName>CQ_Requestor_Contact_c__c</externalDeveloperName>
        <label>CQ Requestor (Contact)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQ_Requestor_Email_c_c__c</fullName>
        <externalDeveloperName>CQ_Requestor_Email_c__c</externalDeveloperName>
        <label>CQ Requestor Email</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQ_Requestor_Name_Contact_c_c__c</fullName>
        <externalDeveloperName>CQ_Requestor_Name_Contact_c__c</externalDeveloperName>
        <label>CQ Requestor Name (Contact)</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQ_Requestor_Name_User_c_c__c</fullName>
        <externalDeveloperName>CQ_Requestor_Name_User_c__c</externalDeveloperName>
        <label>CQ Requestor Name (User)</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQ_Requestor_UPI_c_c__c</fullName>
        <externalDeveloperName>CQ_Requestor_UPI_c__c</externalDeveloperName>
        <label>CQ Requestor UPI</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQ_Requestor_User_c_c__c</fullName>
        <externalDeveloperName>CQ_Requestor_User_c__c</externalDeveloperName>
        <label>CQ Requestor (User)</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQ_Sender_Email_c_c__c</fullName>
        <externalDeveloperName>CQ_Sender_Email_c__c</externalDeveloperName>
        <label>CQ Sender Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>CQ_Sender_Name_c_c__c</fullName>
        <externalDeveloperName>CQ_Sender_Name_c__c</externalDeveloperName>
        <label>CQ Sender Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CQ_Sender_c_c__c</fullName>
        <externalDeveloperName>CQ_Sender_c__c</externalDeveloperName>
        <label>CQ Sender</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQ_Status_Text_c__c</fullName>
        <externalDeveloperName>CQ_Status_Text__c</externalDeveloperName>
        <label>CQ Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQ_Value_Converted_to_Euro_c_c__c</fullName>
        <externalDeveloperName>CQ_Value_Converted_to_Euro_c__c</externalDeveloperName>
        <label>CQ Value Converted to Euro</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQ_Value_Converted_to_USD_c_c__c</fullName>
        <externalDeveloperName>CQ_Value_Converted_to_USD_c__c</externalDeveloperName>
        <label>CQ Value Converted to USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CQ_Value_Text_c__c</fullName>
        <externalDeveloperName>CQ_Value_Text__c</externalDeveloperName>
        <label>CQ Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUnit_c_c__c</fullName>
        <externalDeveloperName>CUnit_c__c</externalDeveloperName>
        <label>Destination Country MU/GCBT and Market</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Commercial_Cluster_Code_c_c__c</fullName>
        <externalDeveloperName>Commercial_Cluster_Code_c__c</externalDeveloperName>
        <label>Subregion</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Count_of_Booked_Sales_Orders_c_c__c</fullName>
        <externalDeveloperName>Count_of_Booked_Sales_Orders_c__c</externalDeveloperName>
        <label>Count of Booked Sales Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Materials_Available_c_c__c</fullName>
        <externalDeveloperName>Count_of_Materials_Available_c__c</externalDeveloperName>
        <label>Count of Materials Available</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CreatedById_c__c</fullName>
        <externalDeveloperName>CreatedById__c</externalDeveloperName>
        <label>Created By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CreatedDate_c__c</fullName>
        <externalDeveloperName>CreatedDate__c</externalDeveloperName>
        <label>Created Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Created_By_Name_c_c__c</fullName>
        <externalDeveloperName>Created_By_Name_c__c</externalDeveloperName>
        <label>Created By Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Email_Sent_c_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Customer_Email_Sent_c__c</externalDeveloperName>
        <label>Customer Email Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Customer_Organization_Segment_Name_c_c__c</fullName>
        <externalDeveloperName>Customer_Organization_Segment_Name_c__c</externalDeveloperName>
        <label>Customer Organization Segment Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Organization_Segment_c_c__c</fullName>
        <externalDeveloperName>Customer_Organization_Segment_c__c</externalDeveloperName>
        <label>Customer Organization Segment</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Project_Code_c_c__c</fullName>
        <externalDeveloperName>Customer_Project_Code_c__c</externalDeveloperName>
        <label>Customer Project Code</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Project_Site_City_c_c__c</fullName>
        <externalDeveloperName>Customer_Project_Site_City_c__c</externalDeveloperName>
        <label>Customer Project Site City</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Project_Site_State_Province_c_c__c</fullName>
        <externalDeveloperName>Customer_Project_Site_State_Province_c__c</externalDeveloperName>
        <label>Customer Project Site State/Province</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Request_Number_c_c__c</fullName>
        <externalDeveloperName>Customer_Request_Number_c__c</externalDeveloperName>
        <label>Customer Request Number</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Unit_Code_c_c__c</fullName>
        <externalDeveloperName>Customer_Unit_Code_c__c</externalDeveloperName>
        <label>MU/GCBT Code</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Unit_Name_c_c__c</fullName>
        <externalDeveloperName>Customer_Unit_Name_c__c</externalDeveloperName>
        <label>MU/GCBT Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Destination_Country_Code_c_c__c</fullName>
        <externalDeveloperName>Destination_Country_Code_c__c</externalDeveloperName>
        <label>Destination Country Code</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Destination_Country_c_c__c</fullName>
        <externalDeveloperName>Destination_Country_c__c</externalDeveloperName>
        <label>Destination Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Afghanistan</fullName>
                </value>
                <value>
                    <fullName>Aland Islands</fullName>
                </value>
                <value>
                    <fullName>Albania</fullName>
                </value>
                <value>
                    <fullName>Algeria</fullName>
                </value>
                <value>
                    <fullName>American Samoa</fullName>
                </value>
                <value>
                    <fullName>Andorra</fullName>
                </value>
                <value>
                    <fullName>Angola</fullName>
                </value>
                <value>
                    <fullName>Anguilla</fullName>
                </value>
                <value>
                    <fullName>Antarctica</fullName>
                </value>
                <value>
                    <fullName>Antigua And Barbuda</fullName>
                </value>
                <value>
                    <fullName>Argentina</fullName>
                </value>
                <value>
                    <fullName>Armenia</fullName>
                </value>
                <value>
                    <fullName>Aruba</fullName>
                </value>
                <value>
                    <fullName>Australia</fullName>
                </value>
                <value>
                    <fullName>Austria</fullName>
                </value>
                <value>
                    <fullName>Azerbaijan</fullName>
                </value>
                <value>
                    <fullName>Bahamas</fullName>
                </value>
                <value>
                    <fullName>Bahrain</fullName>
                </value>
                <value>
                    <fullName>Bangladesh</fullName>
                </value>
                <value>
                    <fullName>Barbados</fullName>
                </value>
                <value>
                    <fullName>Belarus</fullName>
                </value>
                <value>
                    <fullName>Belgium</fullName>
                </value>
                <value>
                    <fullName>Belize</fullName>
                </value>
                <value>
                    <fullName>Benin</fullName>
                </value>
                <value>
                    <fullName>Bermuda</fullName>
                </value>
                <value>
                    <fullName>Bhutan</fullName>
                </value>
                <value>
                    <fullName>Bolivia, Plurinational State Of</fullName>
                </value>
                <value>
                    <fullName>Bonaire, Sint Eustatius And Saba</fullName>
                </value>
                <value>
                    <fullName>Bosnia And Herzegovina</fullName>
                </value>
                <value>
                    <fullName>Botswana</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Email_Status_c_c__c</fullName>
        <externalDeveloperName>Email_Status_c__c</externalDeveloperName>
        <label>Email Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Email Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>End_Customer_Name_c_c__c</fullName>
        <externalDeveloperName>End_Customer_Name_c__c</externalDeveloperName>
        <label>End Customer Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>End_Customer_c_c__c</fullName>
        <externalDeveloperName>End_Customer_c__c</externalDeveloperName>
        <label>End Customer</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_c_c__c</fullName>
        <externalDeveloperName>Expiration_Date_c__c</externalDeveloperName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Sales_Order_Received_Date_c_c__c</fullName>
        <externalDeveloperName>First_Sales_Order_Received_Date_c__c</externalDeveloperName>
        <label>First Sales Order Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>First_Sales_Order_Received_c_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>First_Sales_Order_Received_c__c</externalDeveloperName>
        <label>First Sales Order Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Pricing_Date_c_c__c</fullName>
        <externalDeveloperName>Initial_Pricing_Date_c__c</externalDeveloperName>
        <label>Initial Pricing Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>IsCQ_c_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsCQ_c__c</externalDeveloperName>
        <label>IsCQ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsDeleted_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>IsDeleted__c</externalDeveloperName>
        <label>Deleted</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Cloned_c_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Is_Cloned_c__c</externalDeveloperName>
        <label>Is Cloned</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_ReBid_c_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Is_ReBid_c__c</externalDeveloperName>
        <label>IsRebid?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastActivityDate_c__c</fullName>
        <externalDeveloperName>LastActivityDate__c</externalDeveloperName>
        <label>Last Activity Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LastModifiedById_c__c</fullName>
        <externalDeveloperName>LastModifiedById__c</externalDeveloperName>
        <label>Last Modified By ID</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LastModifiedDate_c__c</fullName>
        <externalDeveloperName>LastModifiedDate__c</externalDeveloperName>
        <label>Last Modified Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastReferencedDate_c__c</fullName>
        <externalDeveloperName>LastReferencedDate__c</externalDeveloperName>
        <label>Last Referenced Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastViewedDate_c__c</fullName>
        <externalDeveloperName>LastViewedDate__c</externalDeveloperName>
        <label>Last Viewed Date</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Modified_By_Name_c_c__c</fullName>
        <externalDeveloperName>Last_Modified_By_Name_c__c</externalDeveloperName>
        <label>Last Modified By Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Lead_BL_c_c__c</fullName>
        <externalDeveloperName>Lead_BL_c__c</externalDeveloperName>
        <label>Lead_BG</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>_3rd Party Integration 3PI</fullName>
                </value>
                <value>
                    <fullName>Fixed Access</fullName>
                </value>
                <value>
                    <fullName>IP Platforms</fullName>
                </value>
                <value>
                    <fullName>IP ROUTING</fullName>
                </value>
                <value>
                    <fullName>IP TRANSPORT</fullName>
                </value>
                <value>
                    <fullName>Managed Services</fullName>
                </value>
                <value>
                    <fullName>LICENSING</fullName>
                </value>
                <value>
                    <fullName>Wireless Access</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Quote_Quantity_c_c__c</fullName>
        <externalDeveloperName>Master_Quote_Quantity_c__c</externalDeveloperName>
        <label>Master Quote Quantity</label>
        <precision>7</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Master_Quote_c_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Master_Quote_c__c</externalDeveloperName>
        <label>Master Quote</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_c__c</fullName>
        <externalDeveloperName>Name__c</externalDeveloperName>
        <label>CQ Name</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_of_Days_Until_Due_c_c__c</fullName>
        <externalDeveloperName>No_of_Days_Until_Due_c__c</externalDeveloperName>
        <label>No. of Days Until Due</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Days_Until_Expiration_c_c__c</fullName>
        <externalDeveloperName>No_of_Days_Until_Expiration_c__c</externalDeveloperName>
        <label>No. of Days Until Expiration</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>No_of_Sales_Orders_c_c__c</fullName>
        <externalDeveloperName>No_of_Sales_Orders_c__c</externalDeveloperName>
        <label>No. of Sales Orders</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Notes_c_c__c</fullName>
        <externalDeveloperName>Notes_c__c</externalDeveloperName>
        <label>Notes</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Num_of_CQ_Document_Links_With_Materials__c</fullName>
        <externalDeveloperName>Num_of_CQ_Document_Links_With_Materials__c</externalDeveloperName>
        <label># of CQ Document Links With Materials</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_CQ_Document_Links_c_c__c</fullName>
        <externalDeveloperName>Num_of_CQ_Document_Links_c__c</externalDeveloperName>
        <label># of CQ Document Links</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_CQ_Line_Items_c_c__c</fullName>
        <externalDeveloperName>Num_of_CQ_Line_Items_c__c</externalDeveloperName>
        <label># of CQ Line Items</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Customer_Contacts_c_c__c</fullName>
        <externalDeveloperName>Num_of_Customer_Contacts_c__c</externalDeveloperName>
        <label># of Customer Contacts</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Num_of_Quote_Team_Members_c_c__c</fullName>
        <externalDeveloperName>Num_of_Quote_Team_Members_c__c</externalDeveloperName>
        <label># of Quote Team Members</label>
        <precision>18</precision>
        <readOnlyProxy>true</readOnlyProxy>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name_Text_Only_c_c__c</fullName>
        <externalDeveloperName>Opportunity_Name_Text_Only_c__c</externalDeveloperName>
        <label>Opportunity Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_Reference_Number_c_c__c</fullName>
        <externalDeveloperName>Opportunity_Reference_Number_c__c</externalDeveloperName>
        <label>Opportunity Reference Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity_c_c__c</fullName>
        <externalDeveloperName>Opportunity_c__c</externalDeveloperName>
        <label>Opportunity Id ALU</label>
        <length>18</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Contracted_Quote_Name_c_c__c</fullName>
        <externalDeveloperName>Parent_Contracted_Quote_Name_c__c</externalDeveloperName>
        <label>Parent Contracted Quote Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Parent_Contracted_Quote_c_c__c</fullName>
        <externalDeveloperName>Parent_Contracted_Quote_c__c</externalDeveloperName>
        <label>Parent Contracted Quote</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Amount_c_c__c</fullName>
        <externalDeveloperName>Purchase_Order_Amount_c__c</externalDeveloperName>
        <label>Purchase Order Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Currency_c_c__c</fullName>
        <externalDeveloperName>Purchase_Order_Currency_c__c</externalDeveloperName>
        <label>Purchase Order Currency</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Purchase_Order_Number_c_c__c</fullName>
        <externalDeveloperName>Purchase_Order_Number_c__c</externalDeveloperName>
        <label>Purchase Order Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Quote_Lead_c_c__c</fullName>
        <externalDeveloperName>Quote_Lead_c__c</externalDeveloperName>
        <label>CQ Lead</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ready_for_Submission_c_c__c</fullName>
        <externalDeveloperName>Ready_for_Submission_c__c</externalDeveloperName>
        <label>Ready for Submission</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RecordTypeId_c__c</fullName>
        <externalDeveloperName>RecordTypeId__c</externalDeveloperName>
        <label>Record Type ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region_c_c__c</fullName>
        <externalDeveloperName>Region_c__c</externalDeveloperName>
        <label>Market</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Regional_Unit_c_c__c</fullName>
        <externalDeveloperName>Regional_Unit_c__c</externalDeveloperName>
        <label>Region</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_Surround_Account_Mismatch_c_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>SFDC_Surround_Account_Mismatch_c__c</externalDeveloperName>
        <label>SFDC/Surround Account Mismatch</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_Email_Failure_Reason_c_c__c</fullName>
        <externalDeveloperName>SP_Email_Failure_Reason_c__c</externalDeveloperName>
        <label>SP Email Failure Reason</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SP_Email_Failure_c_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>SP_Email_Failure_c__c</externalDeveloperName>
        <label>SP Email Failure</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SP_Email_failure_Timestamp_c_c__c</fullName>
        <externalDeveloperName>SP_Email_failure_Timestamp_c__c</externalDeveloperName>
        <label>SP Email failure Timestamp</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Sales_Lead_Email_c_c__c</fullName>
        <externalDeveloperName>Sales_Lead_Email_c__c</externalDeveloperName>
        <label>Sales Lead Email</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Lead_Name_c_c__c</fullName>
        <externalDeveloperName>Sales_Lead_Name_c__c</externalDeveloperName>
        <label>Sales Lead Name</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Lead_UPI_c_c__c</fullName>
        <externalDeveloperName>Sales_Lead_UPI_c__c</externalDeveloperName>
        <label>Sales Lead UPI</label>
        <length>1300</length>
        <readOnlyProxy>true</readOnlyProxy>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Sales_Lead_c_c__c</fullName>
        <externalDeveloperName>Sales_Lead_c__c</externalDeveloperName>
        <label>Sales Lead</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Same_CQ_Lead_Sales_Lead_c_c__c</fullName>
        <defaultValue>false</defaultValue>
        <externalDeveloperName>Same_CQ_Lead_Sales_Lead_c__c</externalDeveloperName>
        <label>Same CQ Lead &amp; Sales Lead</label>
        <readOnlyProxy>true</readOnlyProxy>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SharePoint_Deleted_Links_c_c__c</fullName>
        <externalDeveloperName>SharePoint_Deleted_Links_c__c</externalDeveloperName>
        <label>SharePoint Deleted Links</label>
        <length>4099</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Submitted_to_Customer_Date_c_c__c</fullName>
        <externalDeveloperName>Submitted_to_Customer_Date_c__c</externalDeveloperName>
        <label>Submitted to Customer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Surround_ALCR_c_c__c</fullName>
        <externalDeveloperName>Surround_ALCR_c__c</externalDeveloperName>
        <label>Surround ALCR#</label>
        <length>128</length>
        <type>Text</type>
    </fields>
</CustomObject>